kitsune/sumo/static/less/main.less
/* ... */
.footnote {
  display: inline-block;
  font-size: 12px;
  margin-top: 10px;
}

@media only screen and (max-device-width: 800px) {
  .mobile-banner {
    position: relative;
    width: 100%;
    font-size: 36pt;
    background: #363636;
    color: #fff;
    text-align: center;
    padding: 10pt 0;

    @close_button_size: 40pt;
    .close-button {
      background: #000;
      border: 0.5pt solid #fff;
      .border-radius(50%);
      .box-shadow(0 0 3pt rgba(0, 0, 0, 0.2));
      cursor: pointer;
      height: @close_button_size;
      width: @close_button_size;
      position: absolute;
      left: 16pt;
      bottom: 12pt;
      font-size: 0;

      &:before {
        content: '\2715';
        font-size: 36pt;
        line-height: @close_button_size;
        height: @close_button_size;
        width: @close_button_size;
        text-align: center;
        text-indent: 0;
        position: absolute;
        top: 1pt;
        left: 0;
      }
    }
  }
}

@media only screen and (min-device-width: 801px) {
  .mobile-banner {
    display: none;
  }
}

.user-messages {
  list-style: none;
  margin: 0 0 20px 0;
  padding: 0;

  > li {
    .box-shadow(0 0 2px 0 rgba(0, 0, 0, 0.2));
    padding: 15px 20px;
    position: relative;

    &.info {
      background: #dde2ff;
    }

    &.success {
      background: #efe;
    }

    &.warning {
     background: url('../img/warning-stripes.png') top left repeat-x #ffe;
    }

    &.error {
      background: url('../img/warning-stripes.png') top left repeat-x #fee;
    }

    &.dismissible {
      display: none;
    }

    .close-button {
      background: @iconsSprite -50px -2022px no-repeat;
      cursor: pointer;
      height: 15px;
      position: absolute;
      right: 8px;
      top: 8px;
      width: 15px;
    }
  }
}

.choice-list {
  margin: 2em 0;

  ul {
    display: inline;
  }

  li {
    display: inline-block;
    font-weight: bold;
    list-style: none;
    padding: 0 8px;

    a {
      font-weight: normal;
    }
  }
}

.product-picker {
  position: relative;

  > div {
    margin: 20px 50px 0;
    overflow: hidden;

    > ul {
      list-style: none;
      margin: 0;
      padding: 0;

      > li {
        display: block;
        float: left;
        margin-right: 20px;
        opacity: 0.6;
        .transition(opacity 0.4s);
        width: 135px;

        &:hover {
          opacity: 0.8;
        }

        &:last-of-type {
          margin-right: 0;
        }

        &.selected {
          font-weight: bold;
          opacity: 1;

          > a,
          > a:visited {
            color: #000
          }
        }

        > a,
        > a:visited {
          background: #fff;
          border: 1px solid @borderLightGrey;
          .border-radius(6px);
          .box-sizing(border-box);
          color: @textDarkGrey;
          display: block;
          height: 100%;
          padding: 10px;
          text-align: center;

          > span {
            display: block;
          }

          > .logo-sprite {
            margin: 0 10px;
          }
        }

        > a:hover {
          text-decoration: none;
        }
      }
    }
  }

  > .left,
  > .right {
    background-image: url('../img/carousel-arrow-sprite.png');
    background-repeat: no-repeat;
    bottom: 0;
    cursor: pointer;
    position: absolute;
    top: 0;
    width: 50px;
  }

  > .left {
    background-position: -50px center;
    left: 0;
  }

  > .right {
    background-position: -200px center;
    right: 0;
  }
}

.product-picker-dd {
  margin: 24px 0 0 0;
  position: relative;
  z-index: 10;

  > ul {
    background: #fff;
    border: 1px solid @borderLightGrey;
    .box-sizing(border-box);
    display: none;
    list-style: none;
    margin: 0;
    max-height: 258px;
    overflow: auto;
    padding: 0;
    position: absolute;
    top: 100%;
    width: 100%;

    > li {
      height: 64px;

      > a,
      > a:visited {
        color: @textDarkGrey;
        display: block;
        font-size: 24px;
        height: 100%;
        line-height: 62px;
        padding: 0 0 0 64px;
        position: relative;

        .logo-sprite {
          left: 7px;
          margin-top: -24px;
          position: absolute;
          top: 50%;
        }
      }

      > a:hover {
        background: #e8e8e8;
        text-decoration: none;
      }

      &.selected {
        > a {
          background: @textBlue;
          color: #fff;
        }
      }
    }
  }

  &:hover {
    > ul {
      display: block;
    }
  }

  .current {
    background: #fff;
    border: 1px solid @borderLightGrey;
    .border-radius(12px);
    .box-shadow(0 -2px 0 #d0d0d0 inset);
    font-size: 24px;
    height: 64px;
    line-height: 60px;
    padding: 0 0 0 62px;
    position: relative;

    .logo-sprite {
      left: 7px;
      margin-top: -24px;
      position: absolute;
      top: 50%;
    }
  }

  .dd-btn {
    .gradient(#e8e8e8, #e8e8e8, @borderLightGrey);
    .border-radius(6px);
    float: right;
    height: 50px;
    margin: 6px;
    position: relative;
    width: 62px;

    > img {
      left: 50%;
      margin: -9px 0 0 -20px;
      position: absolute;
      top: 50%;
    }
  }
}

#nav-access {
  background: #fff;
  margin: 0;
  padding: 0;
  position: absolute;
  top: -20em;
  width: 100%;
  z-index: 1001;

  a {
    background: rgba(255, 255, 255, 0.9);
    padding: 12px 10px;
    position: absolute;
    left: 0;
    right: 0;
    font-weight: bold;
    text-align: center;
    padding: 0;
    margin: 0;

    &:focus {
      top: 20em;
      text-decoration: none;
    }
  }
}

.html-rtl {
  > .breadcrumbs {
    > .container_12 {
      > #breadcrumbs {
        > li {
          float: right;
        }
        > li:before {
          margin: 0px 0px 0px 6px;
        }
      }
    }
  }
}

